# vocalize-hr-screen

./: .env.example  .gitignore  LICENSE  README.md  SUBMISSION.md  app.py  hello.py  justfile  pyproject.toml  voice_agent.py
hr_screen_agent/: __init__.py  agent.py  configuration.py  prompts.py  state.py  tools_and_schemas.py  utils.py
hr_screen_agent/hooks/: __init__.py  guardrail.py  pre_model_hook.py
hr_screen_agent/tools/: __init__.py  document_loader.py  end_call.py  interview_summary.py  think.py  time_tracker.py  web_search.py
input/: Aroundhome_jd.md  README.md  cv.txt  jd.md  jd.txt  resume.txt  tech_innovators_inc_senior_software_engineer.md
voice_agent/: agent.py  llm_adapter.py
