[project]
name = "vocalize-hr-screen"
version = "0.1.0"
description = "Using voice (`Vocalize`) for HR screening."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "assemblyai[extras]>=0.42.0",
    "livekit-agents[assemblyai,cartesia,silero]>=1.2.1",
    "livekit-plugins-google>=1.2.1",
    "livekit-plugins-noise-cancellation>=0.2.5",
]
